--- a/springboot/springboot/src/main/resources/application.properties
+++ b/springboot/springboot/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 
+# database config
+
+spring.datasource.url= jdbc:postgresql://localhost:5432/products-api
+spring.datasource.username=postgres
+spring.datasource.password=2002
+spring.jpa.hibernate.ddl-auto=update
+
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
